# benefit-bistro-backend

./: .env.local  .env.test  .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 2024-05-02_created_user_table.py  2024-05-04_updated_users_table.py  2024-05-06_set_unique_email_and_username.py  2024-05-11_renamed_user_table_column.py  2024-05-18_created_groups_table.py
docker/: .env.local  Dockerfile  Makefile  docker-compose-local.yml  docker-compose.yml  entrypoint.sh
requirements/: base.txt  local.txt  prod.txt
scripts/: celery.sh
src/: app.py  config.py  main.py
src/auth/: config.py  constants.py  dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  service.py  units_of_work.py  utils.py
src/celery/: celery_app_config.py  config.py
src/core/: constants.py  exceptions.py  messagebus.py  scheme.py  utils.py
src/groups/: config.py  constants.py  dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  service.py  units_of_work.py
src/security/: models.py  utils.py
src/users/: config.py  constants.py  dependencies.py  exceptions.py  models.py  repositories.py  router.py  service.py  units_of_work.py
static/css/: base.css  register.css  styles.css
templates/: base.html  email_verified.html  homepage.html  index.html  login.html  register.html
templates/email_templates/: email_base.html  verify_email.html
tests/: config.py  conftest.py  utils.py
tests/auth/: fake_objects.py
tests/core/: fake_objects.py
(+99 files in other folders)
