[project]
name = 'Benefit Bistro'

[tool.mypy]
plugins = ['pydantic.mypy']
disallow_any_generics = false
check_untyped_defs = true
warn_return_any = false
ignore_missing_imports = false
disable_error_code = ['empty-body', 'method-assign']
exclude = ['database_data/', 'database_backups/', 'alembic/']

# Avoiding "skipping analyzing 'celery' error":
[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true

# Avoiding incorrect 'override' error for abstract repositories in list() method:
[[tool.mypy.overrides]]
module = [
    "src.users.interfaces.repositories",
    "src.users.repositories",
    "src.groups.interfaces.repositories",
    "src.groups.repositories",
    "tests.users.fake_objects",
    "tests.groups.fake_objects",
]
disable_error_code = ["override"]

[tool.pytest.ini_options]
testpaths = [
    'tests',
]
